force-app/main/default/objects/Frete__c/validationRules/validar_cidade_estado_pais.validationRule-meta.xml
<ValidationRule>
    <fullName>validar_cidade_estado_pais</fullName>
    <active>true</active>
    <errorConditionFormula>(
  IF(ISBLANK(Cidade__c), 0, 1) + 
  IF(ISBLANK(Estado__c), 0, 1) + 
  IF(ISBLANK(Pais__c), 0, 1)
) &lt;&gt; 1</errorConditionFormula>
    <errorMessage>Erro: Apenas um campo deve ser preenchido, Cidade, Estado ou Pais.</errorMessage>
</ValidationRule>